--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/InventoryManagerRole/CreateVaccineJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/InventoryManagerRole/CreateVaccineJPanel.form
@@ -41,22 +41,16 @@
               <Font name="Product Sans" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="0">
-                <Column editable="false" title="Name" type="java.lang.Object"/>
-                <Column editable="false" title="Vaccine Id" type="java.lang.Object"/>
-                <Column editable="false" title="Batch" type="java.lang.Object"/>
+              <Table columnCount="5" rowCount="0">
+                <Column editable="false" title="BatchID" type="java.lang.Object"/>
+                <Column editable="false" title="Vaccine" type="java.lang.Object"/>
                 <Column editable="false" title="Cost" type="java.lang.Object"/>
-                <Column editable="false" title="Description" type="java.lang.Object"/>
-                <Column editable="false" title="Best Before" type="java.lang.Object"/>
+                <Column editable="true" title="status" type="java.lang.Object"/>
+                <Column editable="true" title="message" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
